<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Clique</string>

    <string name="title_activity_login">Clique</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_debug">Debug</string>

    <string name="action_manage_contacts">Contacts</string>
    <string name="action_manage_groups">Groups</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_debug">Debug</string>

    <string name="service_notification_title">Clique</string>
    <string name="service_notification_text">Active… Open to disable.</string>

    <!-- Related to the welcome activity -->
    <string name="welcome">Welcome brave alpha testing adventurer!\nPlease choose a user name:</string>
    <string name="edittext_name_hint">Name</string>

    <!-- Related to the login activity -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in or Register</string>
    <string name="sign_in_welcome_text">Welcome brave beta testing adventurer!</string>
    <string name="error_password_invalid">This password is to short</string>
    <string name="error_password_incorrect">incorrect password</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_username_invalid">This username is invalid</string>

    <!-- Related to the create account dialog -->
    <string name="createaccount_login">login</string>
    <string name="createaccount_password">password</string>
    <string name="createaccount_nickname">nickname</string>

    <!-- Related to the Contacts activity -->
    <string name="contacts_tab_ping">PING</string>
    <string name="contacts_tab_mycontacts">MY CONTACTS</string>
    <string name="contacts_tab_remote">REMOTE</string>
    <string name="button_ping">PING</string>
    <string name="menu_sync_contacts">sync</string>
    <string name="toast_contacts_synced">contacts synced</string>
    <string name="toast_contact_removed">contact removed</string>
    <string name="contacts_remote_placeholder">connect by userid or sms or whatever\n(not implemented)</string>

    <string name="dialog_delete_this_contact">Delete this contact?</string>

    <!-- Related to the Groups activity -->
    <string name="groups_tab_nearby">NEARBY</string>
    <string name="groups_tab_mygroups">MY GROUPS</string>
    <string name="groups_tab_private">PRIVATE</string>
    <string name="groups_nearby_placeholder">find nearby groups\n(not implemented)</string>
    <string name="groups_mygroups_placeholder">manage your groups\n(not implemented)</string>
    <string name="groups_remote_placeholder">connect to remote and private groups\n(not implemented)</string>

    <!-- Related to the Settings activity -->
    <string name="settings_button_setname">set name</string>
    <string name="settings_change_name_instruction">change your profile name</string>
    <string name="settings_change_id_instruction">can\'t touch this!</string>
    <string name="update_rate">update rate:</string>
    <string name="checkbox_enable_compas">enable compass</string>
    <string name="checkbox_enable_sun">show current sun position</string>
    <string name="settings_button_setid">set globalId</string>

    <!-- Related to the About activity -->
    <string name="text_about">
        \nnot a release version
        \nlast release below:
        \n
        \n<b>Clique 1.2.b</b>
        \n
        \n<u>updates since 1.1.0.a:</u>
        \n - migrated to a new app in google play
        \n - connects to a separate development webservice and database
        \n
        \nThere is no encryption yet so all your location updates are public as well as your username, but no other info such as real name, phone number, other profiles…
        \n
        \nLet me know whenever something doesn\'t work or just tell me what you like or dislike and what features you would like to see in the future.
        \n
        \nthanks for testing!
        \nalexander.steen.gent@gmail.com</string>


    <!-- Related to the Debug activity -->

    <!-- Not related to a particular activity -->
    <string name="toast_no_network">no network</string>
    <string name="title_activity_my_view_pager">Dummy</string>
    <string name="dummy_text">dummy</string>
    <string name="hello_blank_fragment">This is a dummy fragment layout</string>
    <string name="no_data_yet">no data yet</string>
    <string name="dialog_no">no</string>
    <string name="dialog_yes">yes</string>

    <!-- Related to blip time/age formatting -->
    <plurals name="timeformatting_sec">
        <item quantity="one">%d sec</item>
        <item quantity="other">%d sec</item>
    </plurals>
    <string name="timeformatting_one_min">one min</string>
    <plurals name="timeformatting_min">
        <item quantity="one">%d min</item>
        <item quantity="other">%d min</item>
    </plurals>
    <string name="timeformatting_one_hour">an hour</string>
    <plurals name="timeformatting_hour">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="timeformatting_one_day">a day</string>
    <plurals name="timeformatting_day">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="timeformatting_over_a_week">over a week</string>
    <string name="timeformatting_ago">ago</string>

    <string name="hello_world">Hello world!</string>

</resources>
