<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pollytronics.clique.CliqueActivity_Main">

    <item android:id="@+id/action_contacts"
        android:icon="@drawable/ic_action_person"
        android:orderInCategory="100"
        android:title="@string/action_manage_contacts"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_groups"
        android:icon="@drawable/ic_action_group"
        android:orderInCategory="100"
        android:title="@string/action_manage_groups"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug"
        android:orderInCategory="100"
        android:title="@string/action_debug"
        app:showAsAction="never" />

</menu>
